--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6aab0ea8decff2c3d883f21186f859b1&libraries=services"></script>
-    <title>React App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_JAVASCRIPT_KEY%&libraries=services"></script>
+  
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
+    integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8"
+    crossorigin="anonymous"></script>
+  <script>
+    Kakao.init("%REACT_APP_JAVASCRIPT_KEY%"); // 사용하려는 앱의 JavaScript 키 입력
+  </script>
+  <title>동네맛집</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
