리액트 및 Express 연동

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_JAVASCRIPT_KEY%&libraries=services"></script>
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9a2e1c8b0bd726e6522013b770aef13f&libraries=services"></script>
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
     integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8"
     crossorigin="anonymous"></script>
