--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,12 +12,12 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_JAVASCRIPT_KEY%&libraries=services"></script>
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9a2e1c8b0bd726e6522013b770aef13f&libraries=services"></script>
   <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
     integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8" crossorigin="anonymous">
     </script>
   <script>
-    Kakao.init("%REACT_APP_JAVASCRIPT_KEY%"); // 사용하려는 앱의 JavaScript 키 입력
+    Kakao.init("9a2e1c8b0bd726e6522013b770aef13f"); // 사용하려는 앱의 JavaScript 키 입력
   </script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
