feat. 서버 수정 후 클라이언트 동적 결합
수정필요) 메인페이지 조회 속도, 위치 인증, 마이페이지 즐겨찾기, 세션만료시간, 사용자 위치 조회, 알림표시, 감성분석, 아디/비밀번호 추가, 로그인/회원가입 메인 이동

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic+Coding&family=Orbit&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic+Coding&family=Orbit&display=swap&family=Jua&display=swap&family=Noto+Serif+KR:wght@200..900&display=swap"
     rel="stylesheet">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
